--- a/package.json
+++ b/package.json
@@ -14,14 +14,22 @@
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "contentlayer": "^0.3.4",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "gray-matter": "^4.0.3",
     "next": "13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^9.0.0",
+    "react-syntax-highlighter": "^15.5.0",
     "react-tabs": "^6.0.1",
+    "remark-gfm": "^4.0.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/react-syntax-highlighter": "^15.5.9"
   }
 }
