--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@types/react-syntax-highlighter": "^15.5.9"
+    "@types/react-syntax-highlighter": "^15.5.9",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.0.2",
+    "prettier": "^3.0.3"
   }
 }
