--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,14 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts","**/*.js", "**/*.tsx", ".next/types/**/*.ts", "src/components/Navbar/use-dimensions.js", "src/components/Navbar/use-dimensions.js"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.js",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/components/Navbar/use-dimensions.js",
+    "src/components/Navbar/use-dimensions.js"
+  ],
   "exclude": ["node_modules"]
 }
