--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "20.2.3",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
+    "@vercel/analytics": "^1.1.1",
     "autoprefixer": "10.4.14",
     "contentlayer": "^0.3.4",
     "eslint": "8.41.0",
